# bxImGui

./: .gitmodules  CMakeLists.txt  README.md  addon.json  bxImGui.cpp  bxImGui.h
examples/: CMakeLists.txt
examples/example_ImGuizmo/: CMakeLists.txt  app.h  main.cpp
examples/example_filebrowser/: CMakeLists.txt  app.h  main.cpp
examples/sample_menubar/: CMakeLists.txt  addons.cmake  app.h  main.cpp
src/: CanvasWindow.cpp  CanvasWindow.h  CoordinateSystem.cpp  CoordinateSystem.h  DebugPanel.cpp  DebugPanel.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ImGuiUtils.h  ImGuiWindow.cpp  ImGuiWindow.h  InfoWindow.cpp  InfoWindow.h  LogWindow.cpp  LogWindow.h  MShortcut.cpp  MShortcut.h  MWindow.cpp  MWindow.h  MainMenuBar.cpp  MainMenuBar.h  Mui.cpp  Mui.h  PropertiesWindow.cpp  PropertiesWindow.h  Registration.cpp  SaveWorkspaceDialog.cpp  SaveWorkspaceDialog.h  TerminalWindow.cpp  TerminalWindow.h  TextureViewerWindow.cpp  TextureViewerWindow.h  ThemeEditorWindow.cpp  ThemeEditorWindow.h  ThemePanel.cpp  ThemePanel.h  ToolbarWindow.cpp  ToolbarWindow.h  U_ui.h  Window.cpp  (+5 more)
